--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.3.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/lodash": "^4.14.182",
     "@types/node": "^17.0.24",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
